--- a/stack.yml
+++ b/stack.yml
@@ -1,9 +1,9 @@
-namespace: monk-gost
+namespace: gost
 
 stack:
   defines: process-group
   runnable-list:
-    - monk-gost/gost
+    - gost/gost
   variables:
     expose_port:
       type: int
